# climlab-sbm-convection

./: .gitignore  2D model test.ipynb  LICENSE  README.md  Testing_Frierson_Convection.ipynb  build_signature_file.sh  capecalc.py  climlab_betts_miller.f90  climlab_cape.f90  meson.build  pyproject.toml  setup.py  simplified_betts_miller.py
.github/workflows/: build-and-test.yml
ci/: requirements-linux.yml  requirements-macos-arm64.yml  requirements-macos.yml  requirements-windows.yml
climlab_sbm_convection/: __init__.py  climlab_betts_miller.f90  meson.build
climlab_sbm_convection/src/: betts_miller.f90
climlab_sbm_convection/tests/: meson.build  test_sbm_convection.py
docs/: 2D model test.ipynb  example_env.yml  simplified_betts_miller.py
src/: constants.F90  sat_vapor_pres.F90
