[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "numpy",
]

[project]
name = "climlab-sbm-convection"
version = "0.1"
# license = { file = "LICENSE.txt" }
# description = "Fundamental algorithms for scientific computing in Python"
# maintainers = [
#     { name = "SciPy Developers", email = "scipy-dev@python.org" },
# ]
# # Note: Python and NumPy upper version bounds should be set correctly in
# # release branches, see:
# #     https://scipy.github.io/devdocs/dev/core-dev/index.html#version-ranges-for-numpy-and-other-dependencies
# requires-python = ">=3.10"
# dependencies = [
#     "numpy>=1.23.5",
# ] # keep in sync with `min_numpy_version` in meson.build
# readme = "README.rst"
# classifiers = [
#     "Development Status :: 5 - Production/Stable",
#     "Intended Audience :: Science/Research",
#     "Intended Audience :: Developers",
#     "License :: OSI Approved :: BSD License",
#     "Programming Language :: C",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.10",
#     "Programming Language :: Python :: 3.11",
#     "Programming Language :: Python :: 3.12",
#     "Topic :: Software Development :: Libraries",
#     "Topic :: Scientific/Engineering",
#     "Operating System :: Microsoft :: Windows",
#     "Operating System :: POSIX :: Linux",
#     "Operating System :: POSIX",
#     "Operating System :: Unix",
#     "Operating System :: MacOS",
# ]
