[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "numpy",
]

[project]
name = "climlab-sbm-convection"
version = "0.2"
description = "Python wrapper for Dargan Frierson's Simplified Betts-Miller moist convection scheme"
license = { file = "LICENSE" }
maintainers = [
    { name = "Brian E. J. Rose", email = "brose@albany.edu" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
